--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <div class="location-details">
                 <div class="detail-chunk">
                     <h3 class="location-heading">
-                        Dine-In & Take-Out
+                        Visit
                     </h3>
                     <p class="address">6102 Brashier Blvd. Suite 1</p>
                     <p class="address">Mechanicsville, VA 23111</p>
@@ -427,7 +427,7 @@
 
                 <div class="detail-chunk">
                     <h3 class="location-heading">
-                        Deliver
+                        Call
                     </h3>
                     <p class="address">804-569-7707​</p>
                 </div>
