+mediaQueries>nav&hero&features

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <a href="#menu" class="nav-option">Menu</a>
             <a href="#contact" class="nav-option">Contact</a>
         </span>
+        <button class="burger-container">
+            <span class="burger"></span>
+        </button>
     </nav>
     <section class="hero">
         <h2 class="hero-text">
