+mediaQuery>menu&contact

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <span id='top'></span>
+    <span></span>
     <nav class="nav">
         <a href="#top" class='toTop'><h1 class="title">Primo Pizza</h1></a>
         <span class='nav-links'>
@@ -28,7 +28,7 @@
             <span class="burger"></span>
         </button>
     </nav>
-    <section class="hero">
+    <section class="hero"  id='top'>
         <h2 class="hero-text">
             Delivering Pizza to Mechanicsville since 2007
         </h2>
@@ -48,7 +48,7 @@
             <div class="about-feature">
                 <h3>Quality</h3>
                 <p>
-                        As one of the premiere delivery restaurants in Mechanicsville, we want to serve our local community with quality food at a quick serve pace. We use fresh ingredients, and even source locally produced food items when in season. We live here too and we want to help keep our local economy strong and prosperous. Think local, buy local, and be a good neighbor.
+                    As one of the premiere delivery restaurants in Mechanicsville, we want to serve our local community with quality food at a quick serve pace. We use fresh ingredients, and even source locally produced food items when in season. We live here too and we want to help keep our local economy strong and prosperous. Think local, buy local, and be a good neighbor.
                 </p>
             </div>
 
@@ -433,6 +433,13 @@
                         Call
                     </h3>
                     <p class="address">804-569-7707​</p>
+                </div>
+
+                <div class="detail-chunk">
+                    <h3 class="location-heading">
+                        Email
+                    </h3>
+                    <p class="address">info@primopizzamechanicsville.com​</p>
                 </div>
             </div>
         </div>
