--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
     <nav class="nav">
         <a href="#top" class='toTop'><h1 class="title">Primo Pizza</h1></a>
         <span class='nav-links'>
-            <a href="#about" class="nav-option">About Us</a>
-            <a href="#menu" class="nav-option">Menu</a>
-            <a href="#contact" class="nav-option">Contact</a>
+            <a href="#about" class="nav-option deadZones">About Us</a>
+            <a href="#menu" class="nav-option" id="menuOption">Menu</a>
+            <span class="subMenu">
+                <a href="#pizza" class="subMenu-option">Pizza</a>
+                <a href="#subs" class="subMenu-option">Subs</a>
+                <a href="#salads" class="subMenu-option">Salads</a>
+            </span>
+            <a href="#contact" class="nav-option deadZones">Contact</a>
         </span>
         <button class="burger-container">
             <span class="burger"></span>
