+Dropdown+MenuFilter+MediaQueries

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <a href="#pizza" class="subMenu-option">Pizza</a>
                 <a href="#subs" class="subMenu-option">Subs</a>
                 <a href="#salads" class="subMenu-option">Salads</a>
+                <a href="#pasta" class="subMenu-option">Pasta</a>
+                <a href="#specials" class="subMenu-option">Specials</a>
+                <a href="#apps" class="subMenu-option">Appetizers</a>
+                <a href="#desserts" class="subMenu-option">Desserts</a>
+                <a href="#drinks" class="subMenu-option">Drinks</a>
             </span>
             <a href="#contact" class="nav-option deadZones">Contact</a>
         </span>
@@ -71,7 +76,7 @@
             Menu
         </header>
         <div class="menu-wrapper">
-                <nav class="menu-nav"><a href="#pizza" class="menu-filter selected">Pizza</a><a href="#subs" class="menu-filter">Subs</a><a href="#salads" class="menu-filter">Salads</a></nav>
+                <nav class="menu-nav"><a href="#pizza" class="menu-filter selected">Pizza</a><a href="#subs" class="menu-filter">Subs</a><a href="#salads" class="menu-filter">Salads</a><a href="#pasta" class="menu-filter">Pasta</a><a href="#specials" class="menu-filter">Specials</a><a href="#apps" class="menu-filter">Appetizers</a><a href="#desserts" class="menu-filter">Desserts</a><a href="#drinks" class="menu-filter">Drinks</a></nav>
         <div class="menu-section pizzas" id='pizza'>
             <h3 class="section-title">
                 Pizzas
@@ -111,12 +116,12 @@
                         </p>
                     </div>
 
-                    <div class="section-item">
+                    <div class="section-item toppings">
                             <h4 class="item-title">
                                 Toppings
                             </h4>
                             <p class="item-description">
-                                <em>Extra‎ Cheese, Feta, Pepperoni, Sausage, Meatballs, Real Bacon, Ham, Canadian Bacon, Mushrooms, Onions, Green Peppers, Black Olives, Banana Peppers, Jalapeno Peppers, Pineapple, Tomatoes, Spinach, Anchovies, Chicken </em>
+                                <em>Extra‎ Cheese, Feta, Pepperoni, Sausage, Meatballs, Real Bacon, Ham, Canadian Bacon, Mushrooms, Onions, Green Peppers, Black Olives, Banana Peppers, Jalapeno Peppers, Pineapple, Tomatoes, Spinach, Anchovies, Chicken* </em>
                             </p>
                             <p class="item-description">
                                 Small - <strong>1.25 each (Chicken $2.00)</strong>
