--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                     <h3 class="location-heading">
                         Call
                     </h3>
-                    <p class="address">804-569-7707​</p>
+                    <a href="tel:804-569-7707" class="address">804-569-7707​</a>
                 </div>
 
                 <div class="detail-chunk">
