--- a/index.html
+++ b/index.html
@@ -433,8 +433,10 @@
                     <h3 class="location-heading">
                         Visit
                     </h3>
-                    <p class="address">6102 Brashier Blvd. Suite 1</p>
-                    <p class="address">Mechanicsville, VA 23111</p>
+                    <a href="https://goo.gl/maps/SXFgG641YBw8jH7t5" target="_blank">
+                        <p class="address">6102 Brashier Blvd. Suite 1</p>
+                        <p class="address">Mechanicsville, VA 23111</p>
+                    </a>
                 </div>
 
                 <div class="detail-chunk">
