--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
     integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
     crossorigin=""></script>
-    <link href="https://fonts.googleapis.com/css?family=Concert+One|Roboto:300,400&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Roboto+Condensed:400,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles.css">
     <title>Primo Pizza</title>
 </head>
