--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     crossorigin=""></script>
     <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Roboto+Condensed:400,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles.css">
-    <title>Primo Pizza</title>
+    <title>Tito's Pizza</title>
 </head>
 
 <body>
     <span></span>
     <nav class="nav">
-        <a href="#top" class='toTop'><h1 class="title">Primo Pizza</h1></a>
+        <a href="#top" class='toTop'><h1 class="title">Tito's Pizza</h1></a>
         <span class='nav-links'>
             <a href="#about" class="nav-option deadZones">About Us</a>
             <a href="#menu" class="nav-option" id="menuOption">Menu</a>
@@ -50,7 +50,7 @@
             <div class="about-feature">
                 <h3>Local</h3>
                 <p>
-                    At Primo Pizza, we offer great food at a great price. From our pizza to our subs to our pasta, we are passionate about what we do. We use only the freshest ingredients and offer dine in, carryout, and delivery. We are the best choice for pizza delivery in Mechanicsville, VA.
+                    At Tito's Pizza, we offer great food at a great price. From our pizza to our subs to our pasta, we are passionate about what we do. We use only the freshest ingredients and offer dine in, carryout, and delivery. We are the best choice for pizza delivery in Mechanicsville, VA.
                 </p>
             </div>
             
@@ -162,7 +162,7 @@
         
                     <div class="section-item">
                         <h4 class="item-title">
-                            The Primo Pizza
+                            The Tito Pizza
                         </h4>
                         <p class="item-description">
                             <em>Pepperoni, sausage, green peppers, onions, mushrooms and extra cheese</em> 
@@ -434,7 +434,7 @@
                         Visit
                     </h3>
                     <a href="https://goo.gl/maps/SXFgG641YBw8jH7t5" target="_blank">
-                        <p class="address">6102 Brashier Blvd. Suite 1</p>
+                        <p class="address">6102 Pizza Place</p>
                         <p class="address">Mechanicsville, VA 23111</p>
                     </a>
                 </div>
@@ -443,14 +443,14 @@
                     <h3 class="location-heading">
                         Call
                     </h3>
-                    <a href="tel:804-569-7707" class="address">804-569-7707​</a>
+                    <a href="tel:804-569-7707" class="address">804-555-7707​</a>
                 </div>
 
                 <div class="detail-chunk">
                     <h3 class="location-heading">
                         Email
                     </h3>
-                    <p class="address">info@primopizzamechanicsville.com​</p>
+                    <p class="address">info@titopizza.com​</p>
                 </div>
             </div>
         </div>
